# aescape_panda_simulator

./: CMakeLists.txt  README.md  package.xml
bag/: test_dual_arm.bag
config/: JointGroupPositionController.yaml  controllers.yaml  dual_panda.rviz  hw_config.yaml  kinect.rviz  panda.rviz  panda_dual.rviz  single_urdf.rviz
csv/: bilat_2_strokes_FROM_R12_TO_R12_1-model.csv  circ_fric_2_strokes_FROM_R12_TO_R12_1-model.csv  circ_fric_2_strokes_FROM_R12_TO_T9_1-model.csv  comp_1_stroke_FROM_R12_TO_R12_1-model.csv
launch/: Unity.launch  camera.launch  cartesian_markers.launch  cartesian_publisher.launch  controllers.launch  dual_cartesian.launch  dual_cartesian_markers.launch  dual_cartesian_publisher.launch  dual_cartesian_publisher_.launch  gazebo.launch  master_aescape_sim.launch  panda_JointGroupPositionController.launch  panda_JointGroupPositionController_example.launch  panda_cartesian.launch  panda_controller.launch  panda_example.launch  panda_gazebo.launch  panda_rviz.launch  phoebe_rhea.launch  robot.launch
launch/Integration/: controller_manager.launch  core.launch  phoebe_rhea.launch
launch/sensors/: depth_camera.launch
meshes/collision/: left_tp.stl  link7.stl
meshes/visual/: left_tp.dae  link7.dae  tool.dae  tool2.dae
models/human/: model.config  model.sdf
models/iron/: model.config  model.sdf
models/styrofoam/: model.config  model.sdf
msg/: ArmGoal.msg
plugins/: model_push.cc
rviz/: visualize.rviz
src/: CartesianMotionController_publisher.cpp  DualCartesianMotionController_publisher.cpp  JointGroupPositionController_publisher.cpp  JointStateController_subscriber.cpp  RobotStatus_publisher.cpp
urdf/: camera.xacro  depth_camera.urdf.xacro  depth_camera.xacro  dual_panda_arm.urdf.xacro  panda.gazebo.xacro  panda.transmission.xacro  panda_arm.urdf.xacro  panda_arm.xacro  panda_gazebo.xacro  panda_transmission.xacro  pepe.xacro  robot.sdf  robot.urdf  robot.urdf.xacro  tool.urdf.xacro  tool.xacro
utils/: xacro_to_urdf_to_sdf.sh
worlds/: aescape.world  panda.world
